--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -8,10 +8,10 @@
   url = "#about"
   weight = 10
 
-[[main]]
-  name = "Posts"
-  url = "#posts"
-  weight = 20
+#[[main]]
+ # name = "Posts"
+ # url = "#posts"
+ # weight = 20
 
 [[main]]
   name = "Projects"
@@ -23,10 +23,10 @@
   url = "#publications"
   weight = 40
 
-[[main]]
-  name = "Teaching"
-  url = "teaching_courses/"
-  weight = 50
+#[[main]]
+  #name = "Teaching"
+ # url = "teaching_courses/"
+  #weight = 50
 
 [[main]]
   name = "Selected Courses Taken"
