--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -28,10 +28,10 @@
  # url = "teaching_courses/"
   #weight = 50
 
-[[main]]
-  name = "Selected Courses Taken"
-  url = "courses/"
-  weight = 60
+#[[main]]
+ # name = "Selected Courses Taken"
+ # url = "courses/"
+ # weight = 60
   
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
@@ -43,7 +43,7 @@
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 70
+  weight = 80
 
 #[[main]]
 #  name = "dropdown"
